Fixed some classes